--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -233,7 +233,7 @@
                 "zh_CN",
                 "zh_TW"
             ],
-            "preview": "../images/appleTV.icns"
+            "preview": "../images/AppStore.icns"
         }
     ],
     "totalApps": 6,
