--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -338,6 +338,32 @@
                 "zh_TW"
             ],
             "preview": "../images/findmy.icns"
+        },
+        {
+            "bundleId": "com.apple.iMovieApp",
+            "name": "iMovie",
+            "localizedName": "iMovie",
+            "category": "APPL",
+            "version": "10.4.3",
+            "shortcutCount": 65,
+            "updatedAt": "2026-01-01",
+            "size": 245761,
+            "supportsLanguages":
+            [
+                "ar",
+                "de",
+                "en",
+                "es",
+                "fr",
+                "hi",
+                "ja",
+                "pt",
+                "ru",
+                "zh",
+                "zh_CN",
+                "zh_TW"
+            ],
+            "preview": "../images/iMovie.icns"
         }
     ],
     "totalApps": 12,
