--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -442,6 +442,32 @@
                 "zh_TW"
             ],
             "preview": "../images/maps.icns"
+        },
+        {
+            "bundleId": "com.apple.MobileSMS",
+            "name": "Messages",
+            "localizedName": "Messages",
+            "category": "social-networking",
+            "version": "1402.700.63.1.18",
+            "shortcutCount": 40,
+            "updatedAt": "2026-01-01",
+            "size": 245761,
+            "supportsLanguages":
+            [
+                "ar",
+                "de",
+                "en",
+                "es",
+                "fr",
+                "hi",
+                "ja",
+                "pt",
+                "ru",
+                "zh",
+                "zh_CN",
+                "zh_TW"
+            ],
+            "preview": "../images/messages.icns"
         }
     ],
     "totalApps": 15,
