--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -494,6 +494,32 @@
                 "zh_TW"
             ],
             "preview": "../images/music.icns"
+        },
+        {
+            "bundleId": "com.apple.news",
+            "name": "News",
+            "localizedName": "News",
+            "category": "news",
+            "version": "5698",
+            "shortcutCount": 32,
+            "updatedAt": "2026-01-02",
+            "size": 245761,
+            "supportsLanguages":
+            [
+                "ar",
+                "de",
+                "en",
+                "es",
+                "fr",
+                "hi",
+                "ja",
+                "pt",
+                "ru",
+                "zh",
+                "zh_CN",
+                "zh_TW"
+            ],
+            "preview": "../images/News.icns"
         }
     ],
     "totalApps": 58,
