--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -572,6 +572,32 @@
                 "zh_TW"
             ],
             "preview": "../images/numbers.icns"
+        },
+        {
+            "bundleId": "com.apple.Photos",
+            "name": "Photos",
+            "localizedName": "Photos",
+            "category": "Photography",
+            "version": "770.0.172",
+            "shortcutCount": 86,
+            "updatedAt": "2026-01-02",
+            "size": 245761,
+            "supportsLanguages":
+            [
+                "ar",
+                "de",
+                "en",
+                "es",
+                "fr",
+                "hi",
+                "ja",
+                "pt",
+                "ru",
+                "zh",
+                "zh_CN",
+                "zh_TW"
+            ],
+            "preview": "../images/numbers.icns"
         }
     ],
     "totalApps": 58,
