--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -597,7 +597,7 @@
                 "zh_CN",
                 "zh_TW"
             ],
-            "preview": "../images/numbers.icns"
+            "preview": "../images/photos.icns"
         }
     ],
     "totalApps": 58,
