--- a/app/keymaster/data/app.json
+++ b/app/keymaster/data/app.json
@@ -676,6 +676,32 @@
                 "zh_TW"
             ],
             "preview": "../images/preview.icns"
+        },
+        {
+            "bundleId": "com.apple.Safari",
+            "name": "Safari",
+            "localizedName": "Safari",
+            "category": "browser",
+            "version": "20623.1.14.18.4",
+            "shortcutCount": 21,
+            "updatedAt": "2026-01-06",
+            "size": 245761,
+            "supportsLanguages":
+            [
+                "ar",
+                "de",
+                "en",
+                "es",
+                "fr",
+                "hi",
+                "ja",
+                "pt",
+                "ru",
+                "zh",
+                "zh_CN",
+                "zh_TW"
+            ],
+            "preview": "../images/Safari.icns"
         }
     ],
     "totalApps": 58,
